--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -2,10 +2,11 @@
 aux_source_directory(. SRC_LIST)
 aux_source_directory(./db DB_LIST)
 aux_source_directory(./model MODEL_LIST)
+aux_source_directory(./redis REDIS_LIST)
 
 # 指定生成可执行文件
-add_executable(ChatServer ${SRC_LIST} ${DB_LIST} ${MODEL_LIST})
+add_executable(ChatServer ${SRC_LIST} ${DB_LIST} ${MODEL_LIST} ${REDIS_LIST})
 
 # 链接库
-target_link_libraries(ChatServer muduo_net muduo_base pthread mysqlclient)
+target_link_libraries(ChatServer muduo_net muduo_base pthread mysqlclient hiredis)
 
